force-app/main/default/objects/Menu__c/fields/pv_goal_etc__c.field-meta.xml
<CustomField>
    <fullName>pv_goal_etc__c</fullName>
    <label>その他条件（目標数値の理由など）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>