force-app/main/default/objects/Menu__c/fields/pv_start_date__c.field-meta.xml
<CustomField>
    <fullName>pv_start_date__c</fullName>
    <label>pv_開始日</label>
    <type>Date</type>
</CustomField>