force-app/main/default/objects/Menu__c/fields/release_date__c.field-meta.xml
<CustomField>
    <fullName>release_date__c</fullName>
    <label>発売日</label>
    <type>Date</type>
</CustomField>