force-app/main/default/objects/Menu__c/fields/report_date__c.field-meta.xml
<CustomField>
    <fullName>report_date__c</fullName>
    <label>WEBレポート希望日</label>
    <type>Date</type>
</CustomField>