force-app/main/default/objects/Menu__c/fields/report_date_change__c.field-meta.xml
<CustomField>
    <fullName>report_date_change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WEBレポート希望日変更</label>
    <type>Checkbox</type>
</CustomField>