force-app/main/default/objects/Menu__c/fields/report_date_change_auto__c.field-meta.xml
<CustomField>
    <fullName>report_date_change_auto__c</fullName>
    <formula>report_date_change__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WEBレポート希望日変更</label>
    <type>Checkbox</type>
</CustomField>