force-app/main/default/objects/Menu__c/fields/report_memo__c.field-meta.xml
<CustomField>
    <fullName>report_memo__c</fullName>
    <label>WEBレポート備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>