force-app/main/default/objects/Menu__c/fields/report_middle__c.field-meta.xml
<CustomField>
    <fullName>report_middle__c</fullName>
    <label>中間レポート希望日</label>
    <type>Date</type>
</CustomField>