force-app/main/default/objects/Menu__c/fields/revision_history__c.field-meta.xml
<CustomField>
    <fullName>revision_history__c</fullName>
    <label>変更履歴一覧</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>