force-app/main/default/objects/Menu__c/fields/s_client_name_ID__c.field-meta.xml
<CustomField>
    <fullName>s_client_name_ID__c</fullName>
    <formula>custom_opportunity__r.clent_name__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>実績スナップショット用</inlineHelpText>
    <label>クライアント</label>
    <type>Text</type>
</CustomField>