force-app/main/default/objects/Menu__c/fields/s_gousuu__c.field-meta.xml
<CustomField>
    <fullName>s_gousuu__c</fullName>
    <formula>magazine_type__r.gousuu__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oldスナップショット用号数</label>
    <type>Text</type>
</CustomField>