force-app/main/default/objects/Menu__c/fields/s_honsuu__c.field-meta.xml
<CustomField>
    <fullName>s_honsuu__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>実績スナップショット用</inlineHelpText>
    <label>本数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>