force-app/main/default/objects/Menu__c/fields/s_menu__c.field-meta.xml
<CustomField>
    <fullName>s_menu__c</fullName>
    <inlineHelpText>実績スナップショット用</inlineHelpText>
    <label>メニュー</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>menu</valueSetName>
    </valueSet>
</CustomField>