force-app/main/default/objects/Menu__c/fields/s_record_type__c.field-meta.xml
<CustomField>
    <fullName>s_record_type__c</fullName>
    <defaultValue>&quot;実績&quot;</defaultValue>
    <label>Oldスナップショット用レコードタイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>