force-app/main/default/objects/Menu__c/fields/s_sales_staff_ID__c.field-meta.xml
<CustomField>
    <fullName>s_sales_staff_ID__c</fullName>
    <formula>custom_opportunity__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>実績スナップショット用</inlineHelpText>
    <label>営業担当者</label>
    <type>Text</type>
</CustomField>