force-app/main/default/objects/Menu__c/fields/s_yosanmei__c.field-meta.xml
<CustomField>
    <fullName>s_yosanmei__c</fullName>
    <formula>magazine_type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>実績スナップショット用</inlineHelpText>
    <label>予算名</label>
    <type>Text</type>
</CustomField>