force-app/main/default/objects/Menu__c/fields/sale_date__c.field-meta.xml
<CustomField>
    <fullName>sale_date__c</fullName>
    <formula>magazine_type__r.hatsubaibi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>発売日</label>
    <type>Date</type>
</CustomField>