force-app/main/default/objects/Menu__c/fields/sales_date__c.field-meta.xml
<CustomField>
    <fullName>sales_date__c</fullName>
    <label>売上日</label>
    <type>Date</type>
</CustomField>