force-app/main/default/objects/Menu__c/fields/sales_staff__c.field-meta.xml
<CustomField>
    <fullName>sales_staff__c</fullName>
    <formula>custom_opportunity__r.sales_staff__c</formula>
    <label>広告営業担当</label>
    <type>Text</type>
</CustomField>