force-app/main/default/objects/Menu__c/fields/sales_staff_mail__c.field-meta.xml
<CustomField>
    <fullName>sales_staff_mail__c</fullName>
    <label>広告営業担当メール</label>
    <type>Email</type>
</CustomField>