force-app/main/default/objects/Menu__c/fields/segment__c.field-meta.xml
<CustomField>
    <fullName>segment__c</fullName>
    <label>セグメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>