force-app/main/default/objects/Menu__c/fields/seisaku_director__c.field-meta.xml
<CustomField>
    <fullName>seisaku_director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>制作担当</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OZND</relationshipName>
    <type>Lookup</type>
</CustomField>