force-app/main/default/objects/Menu__c/fields/seisaku_director_mail__c.field-meta.xml
<CustomField>
    <fullName>seisaku_director_mail__c</fullName>
    <label>制作担当メール</label>
    <type>Email</type>
</CustomField>