force-app/main/default/objects/Menu__c/fields/seisaku_director_old__c.field-meta.xml
<CustomField>
    <fullName>seisaku_director_old__c</fullName>
    <formula>custom_opportunity__r.seisaku_director__r.LastName + &#39; &#39; + custom_opportunity__r.seisaku_director__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OLD制作担当</label>
    <type>Text</type>
</CustomField>