force-app/main/default/objects/Menu__c/fields/seisakuassign__c.field-meta.xml
<CustomField>
    <fullName>seisakuassign__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>trueにするとメール送信されます</inlineHelpText>
    <label>制作アサインメール送信</label>
    <type>Checkbox</type>
</CustomField>