force-app/main/default/objects/Menu__c/fields/seisakusiharai_recordount__c.field-meta.xml
<CustomField>
    <fullName>seisakusiharai_recordount__c</fullName>
    <label>制作支払レコード数</label>
    <summaryForeignKey>SeisakuSiharai__c.menu__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>