force-app/main/default/objects/Menu__c/fields/shubetsu__c.field-meta.xml
<CustomField>
    <fullName>shubetsu__c</fullName>
    <label>Oldスナップショット用レコードタイプ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>実績</fullName>
                <default>true</default>
                <label>実績</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>