force-app/main/default/objects/Menu__c/fields/snapshot_name__c.field-meta.xml
<CustomField>
    <fullName>snapshot_name__c</fullName>
    <formula>TEXT ( accounting_date__c ) &amp; &quot;_&quot; &amp; RecordType.Name &amp; &quot;_&quot; &amp; TEXT ( baitai_name__c ) &amp; &quot;_&quot; &amp; magazine_type__r.gousuu__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oldスナップショット名</label>
    <type>Text</type>
</CustomField>