force-app/main/default/objects/Menu__c/fields/sp_emergent_check__c.field-meta.xml
<CustomField>
    <fullName>sp_emergent_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SP 緊急枠</label>
    <type>Checkbox</type>
</CustomField>