force-app/main/default/objects/Menu__c/fields/sp_emergent_value__c.field-meta.xml
<CustomField>
    <fullName>sp_emergent_value__c</fullName>
    <label>SP 緊急枠</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>