force-app/main/default/objects/Menu__c/fields/sp_goal_check__c.field-meta.xml
<CustomField>
    <fullName>sp_goal_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SP目標</label>
    <type>Checkbox</type>
</CustomField>