force-app/main/default/objects/Menu__c/fields/sp_imp_guarantee_check__c.field-meta.xml
<CustomField>
    <fullName>sp_imp_guarantee_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SP imp保証</label>
    <type>Checkbox</type>
</CustomField>