force-app/main/default/objects/Menu__c/fields/sp_imp_guarantee_value__c.field-meta.xml
<CustomField>
    <fullName>sp_imp_guarantee_value__c</fullName>
    <label>SP imp保証</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>