force-app/main/default/objects/Menu__c/fields/space__c.field-meta.xml
<CustomField>
    <fullName>space__c</fullName>
    <label>スペース</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>４Ｃ１Ｐ</fullName>
            </value>
            <value>
                <fullName>４Ｃ２Ｐ</fullName>
            </value>
            <value>
                <fullName>４Ｃ３Ｐ</fullName>
            </value>
            <value>
                <fullName>４Ｃ４Ｐ</fullName>
            </value>
            <value>
                <fullName>４Ｃ６Ｐ</fullName>
            </value>
            <value>
                <fullName>４Ｃ８Ｐ</fullName>
            </value>
            <value>
                <fullName>４Ｃ１/3Ｐ</fullName>
            </value>
            <value>
                <fullName>４Ｃ変形ﾀﾃ１/4P</fullName>
            </value>
            <value>
                <fullName>１Ｃ１Ｐ</fullName>
            </value>
            <value>
                <fullName>１Ｃ２Ｐ</fullName>
            </value>
            <value>
                <fullName>１Ｃ1/3Ｐ</fullName>
            </value>
            <value>
                <fullName>１Ｃ1/15Ｐ</fullName>
            </value>
            <value>
                <fullName>１Ｃﾀﾃ1/4Ｐ</fullName>
            </value>
            <value>
                <fullName>１Ｃ変形ﾀﾃ１/4Ｐ</fullName>
            </value>
            <value>
                <fullName>１Ｃﾖｺ1/4Ｐ</fullName>
            </value>
            <value>
                <fullName>１Ｃ1/6Ｐ</fullName>
            </value>
            <value>
                <fullName>１Ｃ1/8Ｐ</fullName>
            </value>
            <value>
                <fullName>１Ｃ1/10Ｐ</fullName>
            </value>
            <value>
                <fullName>１Ｃ1/20Ｐ</fullName>
            </value>
            <value>
                <fullName>１Ｃ1/25Ｐ</fullName>
            </value>
            <value>
                <fullName>ハガキ２Ｃ２葉</fullName>
            </value>
            <value>
                <fullName>ハガキ１Ｃ２葉</fullName>
            </value>
            <value>
                <fullName>ハガキ２Ｃ１葉</fullName>
            </value>
            <value>
                <fullName>ハガキ１Ｃ１葉</fullName>
            </value>
            <value>
                <fullName>４Ｃ10Ｐ</fullName>
            </value>
            <value>
                <fullName>４Ｃ12Ｐ</fullName>
            </value>
            <value>
                <fullName>４Ｃ14Ｐ</fullName>
            </value>
            <value>
                <fullName>4C16P</fullName>
            </value>
            <value>
                <fullName>４Ｃ2/3Ｐ</fullName>
            </value>
            <value>
                <fullName>4C44P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>