force-app/main/default/objects/Menu__c/fields/standard_pack__c.field-meta.xml
<CustomField>
    <fullName>standard_pack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>基本パック</label>
    <type>Checkbox</type>
</CustomField>