force-app/main/default/objects/Menu__c/fields/syoudan_status__c.field-meta.xml
<CustomField>
    <fullName>syoudan_status__c</fullName>
    <formula>TEXT(custom_opportunity__r.syoudan_status__c)</formula>
    <label>商談状態</label>
    <type>Text</type>
</CustomField>