force-app/main/default/objects/Menu__c/fields/tag__c.field-meta.xml
<CustomField>
    <fullName>tag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>タグ</label>
    <type>Checkbox</type>
</CustomField>