force-app/main/default/objects/Menu__c/fields/tag_auto__c.field-meta.xml
<CustomField>
    <fullName>tag_auto__c</fullName>
    <formula>tag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>タグ</label>
    <type>Checkbox</type>
</CustomField>