force-app/main/default/objects/Menu__c/fields/tag_check_checkbox__c.field-meta.xml
<CustomField>
    <fullName>tag_check_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>タグ_確認しましたチェックボックス</label>
    <type>Checkbox</type>
</CustomField>