force-app/main/default/objects/Menu__c/fields/tag_memo__c.field-meta.xml
<CustomField>
    <fullName>tag_memo__c</fullName>
    <label>タグ備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>