force-app/main/default/objects/Menu__c/fields/target__c.field-meta.xml
<CustomField>
    <fullName>target__c</fullName>
    <label>ターゲット</label>
    <length>255</length>
    <type>Text</type>
</CustomField>