force-app/main/default/objects/Menu__c/fields/timing__c.field-meta.xml
<CustomField>
    <fullName>timing__c</fullName>
    <label>編集部メール　何本目指定</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>①</fullName>
            </value>
            <value>
                <fullName>②</fullName>
            </value>
            <value>
                <fullName>③</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>