force-app/main/default/objects/Menu__c/fields/wakuyoyaku_comment__c.field-meta.xml
<CustomField>
    <fullName>wakuyoyaku_comment__c</fullName>
    <label>枠予約コメント欄</label>
    <type>TextArea</type>
</CustomField>