force-app/main/default/objects/Menu__c/fields/web_check_checkbox__c.field-meta.xml
<CustomField>
    <fullName>web_check_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WEBレポート_確認しましたチェックボックス</label>
    <type>Checkbox</type>
</CustomField>