force-app/main/default/objects/Menu__c/fields/WEB_report__c.field-meta.xml
<CustomField>
    <fullName>WEB_report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WEBレポート</label>
    <type>Checkbox</type>
</CustomField>