force-app/main/default/objects/Menu__c/fields/WEB_report_tenpu__c.field-meta.xml
<CustomField>
    <fullName>WEB_report_tenpu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WEBレポート作成完了・添付</label>
    <type>Checkbox</type>
</CustomField>