force-app/main/default/objects/Menu__c/fields/yoyakuzumi__c.field-meta.xml
<CustomField>
    <fullName>yoyakuzumi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>予約済み</label>
    <type>Checkbox</type>
</CustomField>