force-app/main/default/objects/Menu__c/recordTypes/boost.recordType-meta.xml
<RecordType>
    <fullName>boost</fullName>
    <active>true</active>
    <label>05:ブースト</label>
</RecordType>