force-app/main/default/objects/Menu__c/recordTypes/custom.recordType-meta.xml
<RecordType>
    <fullName>custom</fullName>
    <active>true</active>
    <label>09:カスタム</label>
</RecordType>