force-app/main/default/objects/Menu__c/recordTypes/DMP.recordType-meta.xml
<RecordType>
    <fullName>DMP</fullName>
    <active>true</active>
    <label>04:DMPレポーティング</label>
</RecordType>