force-app/main/default/objects/Menu__c/recordTypes/nukizuri.recordType-meta.xml
<RecordType>
    <fullName>nukizuri</fullName>
    <active>true</active>
    <label>06:抜刷</label>
</RecordType>