force-app/main/default/objects/Menu__c/recordTypes/other.recordType-meta.xml
<RecordType>
    <fullName>other</fullName>
    <active>true</active>
    <label>11:その他</label>
</RecordType>