force-app/main/default/objects/Menu__c/recordTypes/questionnaire.recordType-meta.xml
<RecordType>
    <fullName>questionnaire</fullName>
    <active>true</active>
    <label>10:アンケート</label>
</RecordType>