force-app/main/default/objects/Menu__c/recordTypes/school.recordType-meta.xml
<RecordType>
    <fullName>school</fullName>
    <active>true</active>
    <label>08:スクール</label>
</RecordType>