force-app/main/default/objects/Menu__c/recordTypes/seminar.recordType-meta.xml
<RecordType>
    <fullName>seminar</fullName>
    <active>true</active>
    <label>07:セミナー</label>
</RecordType>