force-app/main/default/objects/Menu__c/recordTypes/web.recordType-meta.xml
<RecordType>
    <fullName>web</fullName>
    <active>true</active>
    <label>02:WEB</label>
</RecordType>