force-app/main/default/objects/Menu__c/recordTypes/WEB_other.recordType-meta.xml
<RecordType>
    <fullName>WEB_other</fullName>
    <active>true</active>
    <label>03:WEBその他</label>
</RecordType>