force-app/main/default/objects/Menu__c/recordTypes/zassi.recordType-meta.xml
<RecordType>
    <fullName>zassi</fullName>
    <active>true</active>
    <label>01:雑誌</label>
</RecordType>