force-app/main/default/objects/Menu__c/validationRules/menu_status.validationRule-meta.xml
<ValidationRule>
    <fullName>menu_status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(menu_status__c) == &#39;成約・納品&#39;,
				 invoice_address__c == null,
				  invoice_person__c == null
)</errorConditionFormula>
    <errorDisplayField>menu_status__c</errorDisplayField>
    <errorMessage>成約にするには請求書住所、請求書担当を入力してください。</errorMessage>
</ValidationRule>