force-app/main/default/objects/Menu__c/validationRules/menu_status_check.validationRule-meta.xml
<ValidationRule>
    <fullName>menu_status_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(custom_opportunity__r.syoudan_status__c) &lt;&gt; &#39;成約&#39;, OR(TEXT(menu_status__c) == &#39;内定・受注&#39;,TEXT(menu_status__c) == &#39;成約・納品&#39;))</errorConditionFormula>
    <errorDisplayField>menu_status__c</errorDisplayField>
    <errorMessage>商談状態を成約にしてください</errorMessage>
</ValidationRule>