force-app/main/default/objects/Menu__c/validationRules/Name_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Lock</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( Name )</errorConditionFormula>
    <errorMessage>IDは編集禁止です</errorMessage>
</ValidationRule>