force-app/main/default/objects/Menu__c/validationRules/NameLock.validationRule-meta.xml
<ValidationRule>
    <fullName>NameLock</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED ( Name )</errorConditionFormula>
    <errorMessage>IDは編集禁止です</errorMessage>
</ValidationRule>