force-app/main/default/objects/Menu__c/validationRules/validationtest.validationRule-meta.xml
<ValidationRule>
    <fullName>validationtest</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( menu_status__c )</errorConditionFormula>
    <errorMessage>状態は編集できません</errorMessage>
</ValidationRule>