force-app/main/default/objects/Menu__c/listViews/WEB01.listView-meta.xml
<ListView>
    <fullName>WEB01</fullName>
    <columns>custom_opportunity__c</columns>
    <columns>syoudan_status__c</columns>
    <columns>menu_status__c</columns>
    <columns>NAME</columns>
    <columns>menu_type__c</columns>
    <columns>baitai_name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>seisaku_director__c</columns>
    <columns>accounting_date__c</columns>
    <columns>contract_money_tax__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>menu_status__c</field>
        <operation>equals</operation>
        <value>決定済み</value>
    </filters>
    <label>決定済み案件</label>
</ListView>